big fix: view close summary on iPhone

--- a/public/main.css
+++ b/public/main.css
@@ -335,13 +335,13 @@ main {
 }
 
 .summary-header {
-	background:rgba(252, 156, 2, 0.99);
+	background: rgba(252, 156, 2, 0.99);
 }
 
 .summary-header .summary-title {
 	font-size: 13px;
-	padding-right: 20px;
-	padding-left: 20px;
+	padding-right: 30px;
+	padding-left: 30px;
 	padding-top: 15px;
 	padding-bottom: 15px;
 	text-align: center;
@@ -355,14 +355,6 @@ main {
 	text-decoration: underline;
 }
 
-.summary-nav {
-	width: 100%;
-	background-color: transparent;
-	height: 20px;
-	position: absolute;
-	top: 0;
-	right: 0;
-}
 .close-summary {
 	position: fixed;
 	top: 5px;
